force-app/main/default/objects/Misiones__c/Misiones__c.object-meta.xml
<CustomObject>
    <description>Objeto base para la comunidad de Misiones</description>
    <label>Misiones</label>
    <nameField>
        <displayFormat>MIS-{0000000}</displayFormat>
        <label>Misiones Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Misiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>