force-app/main/default/objects/Misiones__c/fields/Citizen__c.field-meta.xml
<CustomField>
    <fullName>Citizen__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Citizen</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Misiones</relationshipLabel>
    <relationshipName>Misiones</relationshipName>
    <type>Lookup</type>
</CustomField>