force-app/main/default/objects/Misiones__c/fields/Cuil_Number__c.field-meta.xml
<CustomField>
    <fullName>Cuil_Number__c</fullName>
    <externalId>true</externalId>
    <label>CUIL / CUIT</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>