force-app/main/default/objects/Misiones__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <label>Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>