force-app/main/default/objects/Misiones__c/fields/Email_Alternative_List__c.field-meta.xml
<CustomField>
    <fullName>Email_Alternative_List__c</fullName>
    <description>Emails  separados por ;</description>
    <label>Email Alternative List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>