force-app/main/default/objects/Misiones__c/fields/Estado_COVID_Misiones__c.field-meta.xml
<CustomField>
    <fullName>Estado_COVID_Misiones__c</fullName>
    <label>Estado COVID Misiones</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NULL</fullName>
                <default>true</default>
                <label>NULL</label>
            </value>
            <value>
                <fullName>Positivo</fullName>
            </value>
            <value>
                <fullName>Vinculo de Positivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>