force-app/main/default/objects/Misiones__c/fields/Fecha_Estado_COVID_Misiones__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Estado_COVID_Misiones__c</fullName>
    <label>Fecha Estado COVID Misiones</label>
    <type>Date</type>
</CustomField>