force-app/main/default/objects/Misiones__c/fields/Gov_Misiones__c.field-meta.xml
<CustomField>
    <fullName>Gov_Misiones__c</fullName>
    <label>Gov Misiones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OPCION 1</fullName>
            </value>
            <value>
                <fullName>OPCION 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>