force-app/main/default/objects/Misiones__c/fields/Interest_Misiones__c.field-meta.xml
<CustomField>
    <fullName>Interest_Misiones__c</fullName>
    <label>Interest Misiones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OPCION A</fullName>
            </value>
            <value>
                <fullName>OPCION B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>