force-app/main/default/objects/Misiones__c/fields/Mobile_Alternative_List__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Alternative_List__c</fullName>
    <description>Celulares separados por ;</description>
    <label>Mobile Alternative List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>