force-app/main/default/objects/Misiones__c/fields/Social_Benefit_Misiones__c.field-meta.xml
<CustomField>
    <fullName>Social_Benefit_Misiones__c</fullName>
    <label>Social Benefit Misiones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OPCION A</fullName>
            </value>
            <value>
                <fullName>OPCION B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>